# synckit

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SECURITY.md  commit_msg.txt  fetch_pr.sh  package-lock.json  package.json
.github/: pull_request_template.md
benchmarks/: README.md  benchmark-client.ts  latency-benchmark.ts  memory-benchmark.ts  package.json  run-benchmarks.ts  server-benchmark.ts  types.ts
core/: Cargo.toml  WASM_README.md  build.rs
demo/: .dockerignore  Dockerfile  README.md  fly.toml  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.js  vite.config.ts
docs/: README.md
examples/: test-load.html
sdk/: PERFORMANCE.md  README.md  package.json  playwright.config.ts  tsup.config.ts  vitest.config.ts
server/python/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
server/python/src/synckit_server/: __init__.py  config.py  main.py  protocol.py  websocket.py
server/python/src/synckit_server/auth/: __init__.py  jwt.py  rbac.py
server/python/src/synckit_server/security/: __init__.py  middleware.py
server/python/src/synckit_server/storage/: __init__.py  errors.py  interface.py  postgres.py  redis.py  redis_pubsub.py  schema.sql
server/python/tests/: __init__.py  conftest.py
server/python/tests/integration/: __init__.py  test_health.py
server/python/tests/unit/: __init__.py  test_protocol.py  test_redis_pubsub.py  test_storage_errors.py  test_storage_interface.py
stress-test/: README.md  fly.toml
tests/: README.md  bunfig.toml  (+2 more)
(+397 files in other folders)
